add new post reverse proxy go

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -4,7 +4,7 @@
     
       <title>
         About ::
-        zhorahmatt — deep tinker
+        The Official Website of zhorahmatt -  — Creative and Deep Thinker
       </title>
     
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -64,7 +64,7 @@ I am using PHP, Golang for programming and now more interested in system archite
 Currently, interested in writing this blog to share my thought. and also as my therapy." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://rahmathidayat.my.id/about/" />
-<meta property="og:site_name" content="zhorahmatt" />
+<meta property="og:site_name" content="The Official Website of zhorahmatt - " />
 
 
 
