--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
     
       <title>
         404 Page not found ::
-        zhorahmatt — deep tinker
+        The Official Website of zhorahmatt -  — Creative and Deep Thinker
       </title>
     
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -55,7 +55,7 @@
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://rahmathidayat.my.id/404.html" />
-<meta property="og:site_name" content="zhorahmatt" />
+<meta property="og:site_name" content="The Official Website of zhorahmatt - " />
 
 
 
